fix layout positioning of page footer and more consistent spacing of content

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,11 +1,9 @@
 @use '../../../styles';
 
-$footer-min-height: 50px;
-
 :host {
-  display: block;
+  @extend %dis-block;
+  @extend %dim-parent;
   background-color: darken(styles.$color-background-default, 5%);
-  min-height: $footer-min-height;
 }
 
 footer {
